Posts are now shipshape and most of the spacing/font issues have been resolved.

--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -36,7 +36,7 @@
   display: inline-block;
   margin-bottom: 20px;
   padding: 8px 20px;
-  @include font-size(14);
+  @include font-size(20);
   background-color: $black;
   color: $white;
   border: 2px solid $black !important;
