--- a/_sass/layouts/_social.scss
+++ b/_sass/layouts/_social.scss
@@ -1,5 +1,15 @@
 .social {
   @include outer-container;
+  max-width: inherit;
+  
+  &_container {
+    width: 90%;
+    margin: 1rem auto;
+    @include media($phablet) {
+      width: 75%;
+    }
+  }
+
   &_item {
     @include span-columns(2 of 12);
     opacity: 0;
